--- a/index.html
+++ b/index.html
@@ -21,17 +21,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Candra & Ika</h1>
+    <h1 class="judul-atas text-center">Candra & Ika</h1>
 
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
       <main>
-        <!-- <h1>Candra & Ika</h1> -->
-        <h4><span>Kepada Bapak/Ibu/Saudara/i, </span></h4>
-        <!-- <h4>ainiii</h4> -->
+        <h4><span>To Mr./Mrs./Family, </span></h4>
         <p>Akan melangsungkan resepsi pernikahan dalam</p>
         <div class="simply-countdown"></div>
-        <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Lihat Undangan</a>
-        <!-- <p style="color: black;">Klik button di atas terlebih dahulu untuk pengalaman yang lebih baik</p> -->
+        <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Open Invitation</a>
       </main>
     </section>
 
@@ -64,9 +61,13 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
-            <h2>Acara Pernikahan</h2>
-            <h3>Diselenggarakan pada 12 Oktober 2025,</h3>
-            <p>oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang bapak/ibu/saudara/i, untuk hadir pada acar pernikahan kami</p>
+            <h2>Wedding Ceremony</h2>
+            <h3>QS. Ar-Rum Ayat 21</h3>
+            <p>وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً ۗاِنَّ فِيْ ذٰلِكَ لَاٰيٰتٍ لِّقَوْمٍ يَّتَفَكَّرُوْنَ</p>
+            <p>
+              Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di antaramu rasa kasih dan sayang. Sungguh,
+              pada yang demikian itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum yang berpikir.
+            </p>
           </div>
         </div>
         <div class="row couple">
@@ -83,9 +84,9 @@
                 <p>Black Flash, kemampuan untuk membuat luka dalam bagi lawan</p>
                 <p>Weapon Proficiency, kemampuan menggunakan berbagai jenis senjata</p> -->
                 <p>
-                  Putra dari Bpk. Supian <br />
-                  dan <br />
-                  Ibu Casriah
+                  Son of Mr. Supian <br />
+                  and <br />
+                  Mother of Mrs. Casriah
                 </p>
               </div>
               <div class="col-4">
@@ -103,9 +104,9 @@
                 <h3>Ika Fajriati</h3>
                 <!-- <p>Saya hanya wanita biasa pecinta gojo satoru dan yuuji itadori</p> -->
                 <p>
-                  Putra dari Bpk. Ahmad Baihaqi <br />
-                  dan <br />
-                  ibu Ibu Hikmah
+                  Son of Mr. Ahmad Baihaqi <br />
+                  and <br />
+                  Mother of Mrs. Hikmah
                 </p>
               </div>
             </div>
@@ -118,8 +119,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <h2>Informasi Acara</h2>
-            <p class="alamat">Alamat : Mesjd Raya Rusunawa Nagrak, Jakarta Utara <br /></p>
+            <h2>Event Details</h2>
+            <p class="alamat">Venue : Mesjd Raya Rusunawa Nagrak, Jakarta Utara <br /></p>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.037571043543!2d106.9508805!3d-6.1256465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6a21a97b35eb85%3A0x17e607b0b0d84f5b!2sMasjid%20raya%20rusunawa%20nagrak!5e0!3m2!1sid!2sid!4v1758447619671!5m2!1sid!2sid"
               width="100%"
@@ -129,8 +130,8 @@
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
-            <a href="https://maps.app.goo.gl/waWDs4XQPP41v8BZ9" target="_blank" class="btn btn-light btn-sm my-4">Klik Lihat Alamat</a>
-            <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak ada tanda-tanda sedang di langsungkan pernikahan, boleh jadi Anda salah jadwal atau salah tempat</p>
+            <a href="https://maps.app.goo.gl/waWDs4XQPP41v8BZ9" target="_blank" class="btn btn-light btn-sm my-4">See Details</a>
+            <p class="description">With great honor and joy, we cordially invite you to share in our happiness as we unite in marriage, which will be held on:</p>
           </div>
         </div>
         <div class="row justify-content-center mt-4">
@@ -141,15 +142,15 @@
                 <div class="row justify-content-center">
                   <div class="col-md-6">
                     <i class="bi bi-clock d-block"></i>
-                    <span>Jam 09.00</span>
+                    <span>Time 09.00 AM</span>
                   </div>
                   <div class="col-md-6">
                     <i class="bi bi-calendar-heart d-block"></i>
-                    <span>Minggu, 12 Oktober 2025</span>
+                    <span>Sunday, 12 October 2025</span>
                   </div>
                 </div>
               </div>
-              <div class="card-footer">Saat acara akad diharapkan untuk kondusif menjaga kekhidmatan dan kekhusyuan seluruh prosesi</div>
+              <div class="card-footer">We request all guests to honor the sanctity of the marriage solemnization</div>
             </div>
           </div>
           <div class="col-md-5 col-10">
@@ -159,16 +160,21 @@
                 <div class="row justify-content-center">
                   <div class="col-md-6">
                     <i class="bi bi-clock d-block"></i>
-                    <span>Jam 12.00 s.d Selesai </span>
+                    <span>Time 12.00 PM onwards </span>
                   </div>
                   <div class="col-md-6">
                     <i class="bi bi-calendar-heart d-block"></i>
-                    <span>Minggu, 12 Oktober 2025</span>
+                    <span>Sunday, 12 October 2025</span>
                   </div>
                 </div>
               </div>
-              <div class="card-footer">Saat acara akad diharapkan untuk kondusif menjaga kekhidmatan dan kekhusyuan seluruh prosesi</div>
+              <div class="card-footer">We request all guests to honor the sanctity of the marriage solemnization</div>
             </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <p class="description">Please save the date and join us on our special day!</p>
           </div>
         </div>
       </div>
@@ -178,8 +184,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span>Bagaimana Cinta Kami Bersemi</span>
-            <h2>Cerita Kami</h2>
+            <span>The Journey of Our Blossoming Love</span>
+            <h2>Our Love Journey</h2>
             <!-- <p>Perjalanan Bertemu Gojo Satoru</p> -->
           </div>
         </div>
@@ -191,11 +197,11 @@
                 <div class="timeline-image" style="background-image: url(img/prewed\ 12.jpg)"></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h3>Pertama Bertemu</h3>
-                    <span>Maret 2020</span>
+                    <h3>First Meet</h3>
+                    <span>March 2020</span>
                   </div>
                   <div class="timeline-body">
-                    <p>kami di kenalkan oleh salah satu teman melalui sebuah panggilan Telepon.</p>
+                    <p>Our story began when a friend introduced us through a simple phone call.</p>
                   </div>
                 </div>
               </li>
@@ -203,11 +209,11 @@
                 <div class="timeline-image" style="background-image: url(img/prewed2.jpg)"></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h3>Menjalin Hubungan</h3>
-                    <span>Mei 2020</span>
+                    <h3>Building Our Relationship</h3>
+                    <span>May 2020</span>
                   </div>
                   <div class="timeline-body">
-                    <p>kami membangun komunikasi perlahan, saling mengenal lebih dalam, dan ada rasa nyaman yang muncul begitu saja.</p>
+                    <p>We slowly built our communication, got to know each other more deeply, and a sense of comfort blossomed naturally between us</p>
                   </div>
                 </div>
               </li>
@@ -215,11 +221,11 @@
                 <div class="timeline-image" style="background-image: url(img/foto2.jpg)"></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h3>Pilihan Terakhir</h3>
-                    <span>31 Agustus 2025</span>
+                    <h3>The Final Chapter</h3>
+                    <span>31 August 2025</span>
                   </div>
                   <div class="timeline-body">
-                    <p>Setelah saling menguatkan selama beberapa tahun, kami memutuskan untuk melangkah ke jenjang yang lebih serius. Dengan restu kedua keluarga, kami melaksanakan lamaran yang hangat dan disaksikan keluarga.</p>
+                    <p>After a long journey together, we decided to take a more serious step. With the blessings of both families, we celebrated a warm and intimate proposal witnessed by our loved ones.</p>
                   </div>
                 </div>
               </li>
@@ -234,7 +240,7 @@
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
             <!-- <span>Memori Kisah Kami</span> -->
-            <h2>Galeri Foto</h2>
+            <h2>Gallery</h2>
             <!-- <p>Lorem ipsum dolor sit amet</p> -->
           </div>
         </div>
@@ -267,20 +273,20 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <h2>Konfirmasi Kehadiran</h2>
-            <p>Isi form dibawah ini untuk melakukan konfirmasi kehadiran</p>
+            <h2>RSVP</h2>
+            <p>Please fill out the form below to confirm your attendance</p>
           </div>
         </div>
         <form class="row row-cols-md-auto g-3 align-items-center justify-content-center" method="POST" action="https://script.google.com/macros/s/AKfycbwzKsi7EaSTJ6gBMrULjGc7B1_TZXKoARIxzgMPBM1-2g6VQAlJqO8ZVmBThNo2ehWMQQ/exec" id="my-form">
           <div class="col-12">
             <div class="mb-3">
-              <label for="nama" class="form-label">Nama</label>
+              <label for="nama" class="form-label">Name</label>
               <input type="text" class="form-control" id="nama" name="nama" />
             </div>
           </div>
           <div class="col-12">
             <div class="mb-3">
-              <label for="jumlah" class="form-label">Jumlah</label>
+              <label for="jumlah" class="form-label">Qty</label>
               <input type="number" class="form-control" id="jumlah" name="jumlah" min="1" max="5" length="1" value="1" />
             </div>
           </div>
@@ -288,14 +294,14 @@
             <div class="mb-3">
               <label for="status" class="form-label">Status</label>
               <select name="status" id="status" class="form-select">
-                <option selected>Pilih salah satu</option>
-                <option value="1">Hadir</option>
-                <option value="0">Tidak Hadir</option>
+                <option selected>Choose one</option>
+                <option value="1">Attending</option>
+                <option value="0">Not Attending</option>
               </select>
             </div>
           </div>
           <div class="col-12" style="margin-top: 35px">
-            <button class="btn btn-primary">Kirim</button>
+            <button class="btn btn-primary">Send</button>
           </div>
         </form>
 
@@ -331,8 +337,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span>Ungkapan tanda kasih</span>
-            <h2>Kirim Hadiah</h2>
+            <span>Gift</span>
+            <h2>Send a Gift</h2>
             <!-- <p>Asupan biar nyengir :P</p> -->
           </div>
         </div>
@@ -342,6 +348,10 @@
               <li class="list-group-item">
                 <div class="fw-bold">BRI</div>
                 005801017030536 - Candra Afriansyah
+              </li>
+              <li class="list-group-item">
+                <div class="fw-bold">BCA</div>
+                5790560355 - Ika Fajriati
               </li>
               <li class="list-group-item">
                 <div class="fw-bold">BRI</div>
@@ -393,18 +403,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
     <script>
       simplyCountdown(".simply-countdown", {
-        year: 2024, // required
-        month: 12, // required
-        day: 20, // required
-        hours: 0, // Default is 0 [0-23] integer
+        year: 2025, // required
+        month: 10, // required
+        day: 12, // required
+        hours: 9, // Default is 0 [0-23] integer
         minutes: 0, // Default is 0 [0-59] integer
         seconds: 0, // Default is 0 [0-59] integer
         words: {
           //words displayed into the countdown
-          days: { singular: "hari", plural: "hari" },
-          hours: { singular: "jam", plural: "jam" },
-          minutes: { singular: "menit", plural: "menit" },
-          seconds: { singular: "detik", plural: "detik" },
+          days: { singular: "day", plural: "day" },
+          hours: { singular: "hour", plural: "hour" },
+          minutes: { singular: "minute", plural: "minute" },
+          seconds: { singular: "second", plural: "second" },
         },
       });
     </script>
