--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
       <main>
         <h4>To, <span></span></h4>
-        <p>Akan melangsungkan resepsi pernikahan dalam</p>
+        <p>Our wedding will be held in :</p>
         <div class="simply-countdown"></div>
         <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Open Invitation</a>
       </main>
