--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="judul-atas text-center">Candra & Ika</h1>
+    <!-- <h1 class="judul-atas text-center">Candra & Ika</h1> -->
 
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
       <main>
+        <h1 class="judul-atas text-center">Candra & Ika</h1>
         <h4>To, <span></span></h4>
         <p>Our wedding will be held in :</p>
         <div class="simply-countdown"></div>
