--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     <script>
       const urlParams = new URLSearchParams(window.location.search);
       const nama = urlParams.get("n") || "";
-      const pronoun = urlParams.get("p") || "Bapak/Ibu/Saudara/i";
+      const pronoun = urlParams.get("p") || "Mr/Mrs.";
 
       console.log(nama);
 
