--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                   Mother of Mrs. Casriah
                 </p>
               </div>
-              <div class="col-4">
+              <!-- <div class="col-4">
                 <img src="img/cowok.jpg" alt="gojo satoru" class="img-responsive rounded-circle" />
-              </div>
+              </div> -->
             </div>
           </div>
           <span class="heart"><i class="bi bi-heart-fill"></i></span>
