--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
     <div id="audio-container">
       <audio id="song" autoplay loop>
-        <source src="img/audio/benar.mp3" type="audio/mp3" />
+        <source src="img/audio/wedding.mp3" type="audio/mp3" />
       </audio>
 
       <div class="audio-icon-wrapper" style="display: none">
