--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p>
                   Son of Mr. Supian <br />
                   and <br />
-                  Mother of Mrs. Casriah
+                  Mrs. Casriah
                 </p>
               </div>
               <div class="col-4">
@@ -107,7 +107,7 @@
                 <p>
                   Son of Mr. Ahmad Baihaqi <br />
                   and <br />
-                  Mother of Mrs. Hikmah
+                  Mrs. Hikmah
                 </p>
               </div>
             </div>
