--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
       <main>
-        <h1 class="judul-atas text-center">Candra & Ika</h1>
+        <h1 class="judul-atas text-center">Candra &</h1>
+        <h1>Ika</h1>
         <h4>To,<span></span></h4>
-        <p>Our wedding will be held in :</p>
-        <div class="simply-countdown"></div>
+        <!-- <p>Our wedding will be held in :</p>
+        <div class="simply-countdown"></div> -->
         <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Open Invitation</a>
       </main>
     </section>
@@ -105,7 +106,7 @@
                 <h3>Ika Fajriati</h3>
                 <!-- <p>Saya hanya wanita biasa pecinta gojo satoru dan yuuji itadori</p> -->
                 <p>
-                  Son of Mr. Ahmad Baihaqi <br />
+                  Daughter of Mr. Ahmad Baihaqi <br />
                   and <br />
                   Mrs. Hikmah
                 </p>
@@ -173,19 +174,22 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <!-- <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
             <p class="description">Please save the date and join us on our special day!</p>
           </div>
-        </div>
+        </div> -->
       </div>
+<br>
+      <!-- <p>Our wedding will be held in :</p> -->
+      <div class="simply-countdown"></div>
     </section>
 
     <section id="story" class="story">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span>The Journey of Our Blossoming Love</span>
+            <!-- <span>The Journey of Our Blossoming Love</span> -->
             <h2>Our Love Journey</h2>
             <!-- <p>Perjalanan Bertemu Gojo Satoru</p> -->
           </div>
@@ -338,7 +342,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span>Gift</span>
+            <!-- <span>Gift</span> -->
             <h2>Send a Gift</h2>
             <!-- <p>Asupan biar nyengir :P</p> -->
           </div>
