--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
       <main>
-        <h1 class="judul-atas text-center">Candra &</h1>
-        <h1>Ika</h1>
+        <h1 class="judul-atas text-center">Candra</h1>
+        <h1 class="judul-atas text-center">&</h1>
+        <h1 class="judul-atas text-center">Ika</h1>
+        <!-- <h1>Ika</h1> -->
         <h4>To,<span></span></h4>
         <!-- <p>Our wedding will be held in :</p>
         <div class="simply-countdown"></div> -->
