--- a/index.html
+++ b/index.html
@@ -21,18 +21,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="judul-atas text-center">
+      <p>Candra</p>
+      <p>&</p>
+      <p>Ika</p>
+    </div>
     <!-- <h1 class="judul-atas text-center">Candra & Ika</h1> -->
+      <!-- <h1 class="judul-atas text-center">Candra & Ika</h1> -->
 
-    <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
+    <section id="hero" class="hero w-100 h-80 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
       <main>
-        <h1 class="judul-atas text-center">Candra</h1>
-        <h1 class="judul-atas text-center">&</h1>
-        <h1 class="judul-atas text-center">Ika</h1>
-        <!-- <h1>Ika</h1> -->
+        <!-- <h1 class="judul-atas text-center">Candra &</h1>
+        <h1>Ika</h1> -->
         <h4>To,<span></span></h4>
         <!-- <p>Our wedding will be held in :</p>
         <div class="simply-countdown"></div> -->
-        <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Open Invitation</a>
+        <a href="#home" class="btn btn-lg mt-2" onclick="enableScroll()">Open Invitation</a>
       </main>
     </section>
 
@@ -182,7 +186,7 @@
           </div>
         </div> -->
       </div>
-      <br />
+<br>
       <!-- <p>Our wedding will be held in :</p> -->
       <div class="simply-countdown"></div>
     </section>
