--- a/index.html
+++ b/index.html
@@ -27,16 +27,22 @@
       <p>Ika</p>
     </div>
     <!-- <h1 class="judul-atas text-center">Candra & Ika</h1> -->
-      <!-- <h1 class="judul-atas text-center">Candra & Ika</h1> -->
+    <!-- <h1 class="judul-atas text-center">Candra & Ika</h1> -->
 
     <section id="hero" class="hero w-100 h-80 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
       <main>
         <!-- <h1 class="judul-atas text-center">Candra &</h1>
         <h1>Ika</h1> -->
         <h4>To,<span></span></h4>
+
+        <a href="#home" class="btn btn-lg mt-2" onclick="enableScroll()">Open Invitation</a>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
         <!-- <p>Our wedding will be held in :</p>
         <div class="simply-countdown"></div> -->
-        <a href="#home" class="btn btn-lg mt-2" onclick="enableScroll()">Open Invitation</a>
       </main>
     </section>
 
@@ -72,10 +78,7 @@
             <h2>Wedding Ceremony</h2>
             <h3>QS. Ar-Rum Ayat 21</h3>
             <p>وَمِنْ اٰيٰتِهٖٓ اَنْ خَلَقَ لَكُمْ مِّنْ اَنْفُسِكُمْ اَزْوَاجًا لِّتَسْكُنُوْٓا اِلَيْهَا وَجَعَلَ بَيْنَكُمْ مَّوَدَّةً وَّرَحْمَةً ۗاِنَّ فِيْ ذٰلِكَ لَاٰيٰتٍ لِّقَوْمٍ يَّتَفَكَّرُوْنَ</p>
-            <p>
-              Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan pasangan-pasangan untukmu dari jenismu sendiri, agar kamu cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di antaramu rasa kasih dan sayang. Sungguh,
-              pada yang demikian itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum yang berpikir.
-            </p>
+            <p>And among His signs is that He created spouses for you from yourselves so that you may find comfort in them. And He established love and compassion between you. Indeed, there are signs in this for people who reflect.</p>
           </div>
         </div>
         <div class="row couple">
@@ -186,7 +189,7 @@
           </div>
         </div> -->
       </div>
-<br>
+      <br />
       <!-- <p>Our wedding will be held in :</p> -->
       <div class="simply-countdown"></div>
     </section>
