--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           </div>
           <div class="col-md-5 col-10">
             <div class="card text-center text-bg-light">
-              <div class="card-header">Resepsi</div>
+              <div class="card-header">Wedding Reception</div>
               <div class="card-body">
                 <div class="row justify-content-center">
                   <div class="col-md-6">
