--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
               </li>
               <li class="list-group-item">
                 <div class="fw-bold">BRI</div>
-                <img src="img/qr.jpeg" alt="Gopay QR" class="img-thumbnail" width="150" />
+                <img src="img/qrbg.jpg" alt="Brimo QR" class="img-thumbnail" width="150" />
               </li>
             </ul>
           </div>
