--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             <small class="block">Design by <a href="https://instagram.com/ayyyamgoyeng">@ayyyamgoyeng</a>.</small>
             <ul class="mt-3">
               <li>
-                <a href="https://instagram.com/nanamiiisannnn"><i class="bi bi-instagram"></i></a>
+                <a href="https://instagram.com/ayyyamgoyeng"><i class="bi bi-instagram"></i></a>
               </li>
               <li>
                 <a href="#"><i class="bi bi-youtube"></i></a>
