--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 <a href="#"><i class="bi bi-twitter"></i></a>
               </li>
               <li>
-                <a href="#"><i class="bi bi-tiktok"></i></a>
+                <a href="https://github.com/aiayay"><i class="bi bi-github"></i></a>
               </li>
             </ul>
           </div>
